# GasPrices

./: README.md  main.py  pyproject.toml  urls.txt
gasprices/: api.py  scrapper.py
gasprices/shared/: fetchers.py  model.py  store.py
src/gasprices/: fetchers.py  main.py  model.py  scrapper.py  store.py
src/gasprices/shared/: fetchers.py  model.py  store.py
